--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img class="profile-image"src="images/profile-image.png" alt="profile-img">
         <h2>Welcome.</h2>
-        <p class="intro">I am an amature web developer paving my way to become a professional. Welcome to my wonderful website! </p>
+        <p class="intro">I am an amateur web developer paving my way to become a professional. Welcome to my wonderful website! </p>
       </div>
       <hr>
       <div class="skills">
